--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace - Domain Name Registration, Cloud Hosting, VPS Hosting, Linux Dedicated Web Hosting, and more.
+  <title>Linespace - Domain Name Registration, Cloud Hosting, VPS Hosting, Linux Dedicated Web Hosting, Website Builder,
+    and more.
   </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -158,7 +159,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="services/managed_services.html">VPS Hosting</a></h4>
+              <h4 class="title"><a href="services/#">VPS Hosting</a></h4>
               <p class="description">Grow your sites with a VPS server. Enjoy a variety of free addons and multiple
                 operating systems—all included in one great package.</p>
             </div>
@@ -167,7 +168,18 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/data_and_analytics.html">Linux Dedicated Web Hosting</a></h4>
+              <h4 class="title"><a href="services/#">Linux Dedicated Web Hosting</a></h4>
+              <p class="description">Our dedicated server packages set new standards in hosting. Choose Ubuntu, CentOS,
+                or
+                Debian at sign-up and get a free dedicated IP. Our custom internal network ensures a 99.9% uptime
+                guarantee.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="services/#">Website Builder</a></h4>
               <p class="description">Our dedicated server packages set new standards in hosting. Choose Ubuntu, CentOS,
                 or
                 Debian at sign-up and get a free dedicated IP. Our custom internal network ensures a 99.9% uptime
@@ -988,7 +1000,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="services/#">Linux Dedicated Web
                   Hosting</a>
               </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Web Builder</a>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Website Builder</a>
               </li>
             </ul>
           </div>
