--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               <li><a href="services/#">Cloud Hosting</a></li>
               <li><a href="services/#">VPS Hosting</a></li>
               <li><a href="services/#">Linux Dedicated Web Hosting</a></li>
+              <li><a href="services/#">Website Builder</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
@@ -180,10 +181,10 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="services/#">Website Builder</a></h4>
-              <p class="description">Our dedicated server packages set new standards in hosting. Choose Ubuntu, CentOS,
-                or
-                Debian at sign-up and get a free dedicated IP. Our custom internal network ensures a 99.9% uptime
-                guarantee.</p>
+              <p class="description">Our Website Builder lets you create a professional site with no coding needed.
+                Choose from customizable templates, use drag-and-drop tools, and launch your site quickly. Ideal for
+                businesses, entrepreneurs, and individuals, it includes features like image galleries, contact forms,
+                and e-commerce tools.</p>
             </div>
           </div>
 
