--- a/index.html
+++ b/index.html
@@ -131,6 +131,80 @@
 
   <main id="main">
 
+    <!-- ======= Contact Section ======= -->
+    <section id="domain" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contact</h2>
+          <p></p>
+        </div>
+
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6">
+            <div class="info-box mb-4">
+              <i class="bx bx-envelope"></i>
+              <h3>Email</h3>
+              <p><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="info-box  mb-4">
+              <i class="bx bx-envelope"></i>
+              <h3>Call</h3>
+              <p><a href="tel:+268-7683-6426">+268-7683-6426</a> | <a href="tel:+268-7943-5667">+268-7943-5667</a></p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="info-box  mb-4">
+              <i class="bx bx-chat"></i>
+              <h3>Chat</h3>
+              <p><a href="https://wa.me/26879255469">+268-7925-5469</a></p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-6 ">
+            <iframe class="mb-4 mb-lg-0" src="" frameborder="0" style="border:0; width: 100%; height: 384px;"
+              allowfullscreen></iframe>
+          </div>
+
+          <div class="col-lg-6">
+            <form action="https://formspree.io/f/xpwarwan" method="POST" role="form" class="php-email-form">
+              <div class="row">
+                <div class="col form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                </div>
+                <div class="col form-group">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                </div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End Contact Section -->
+
     <!-- ======= Featured Services Section ======= -->
     <section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
@@ -1065,9 +1139,9 @@
   <script type="text/javascript">
     searchApiOptions = {
       store: "linespace",
-      containerId: "",
+      containerId: "domain",
       submitURL: "",
-      selectedTld: "net",
+      selectedTld: "com",
       popupBox: true,
       floatingBox: false
     };
