[FIX] Popup box

--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
       containerId: "domain",
       submitURL: "",
       selectedTld: "com",
-      popupBox: true,
+      popupBox: false,
       floatingBox: false
     };
   </script>
