--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace - Domain Name Registration, Cloud Hosting, VPS Hosting, Linux Dedicated Web Hosting, Website Builder,
+  <title>Linespace Software - Domain Name Registration, Cloud Hosting, VPS Hosting, Linux Dedicated Web Hosting, Website
+    Builder,
     and more.
   </title>
   <meta content="" name="description">
@@ -30,7 +31,7 @@
 
   <!-- Domain Search Form -->
   <link rel="stylesheet" type="text/css"
-    href="https://secure.duoservers.com/tld-search/api-search.css?color=0000ff&width=700" />
+    href="https://secure.duoservers.com/tld-search/api-search.css?color=3b8af2&width=700" />
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -123,7 +124,8 @@
       </h2>
       <div class="d-flex">
         <a href="#contact" class="btn-get-started scrollto">Get a Free Consultation</a>
-        <!-- <a href="#" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
+        <a href="https://linespace.duoservers.com/videos/DuoServers-Intro-Video-full-640-var.new1.mp4"
+          class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
       </div>
     </div>
   </section>
@@ -1039,7 +1041,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span></span></h3>
             <p>
-              We are a web services company specialising in creating tailored software solutions to meet the unique
+              We're a web services company specialising in creating tailored software solutions to meet the unique
               needs of individuals, businesses, and organizations. Our mission is to empower our clients with
               cutting-edge technology and exceptional service.<br><br>
               <strong>ID: </strong>321740<br />
@@ -1141,7 +1143,7 @@
       store: "linespace",
       containerId: "domain",
       submitURL: "",
-      selectedTld: "com",
+      selectedTld: "co.za",
       popupBox: false,
       floatingBox: false
     };
