--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
           </li> -->
           <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="services/#">Domain Name Registration</a></li>
-              <li><a href="services/#">Cloud Hosting</a></li>
-              <li><a href="services/#">VPS Hosting</a></li>
-              <li><a href="services/#">Linux Dedicated Web Hosting</a></li>
-              <li><a href="services/#">Website Builder</a></li>
+              <li><a href="services/domain-name-registration.html">Domain Name Registration</a></li>
+              <li><a href="services/cloud-hosting.html">Cloud Hosting</a></li>
+              <li><a href="services/vps-hosting.html">VPS Hosting</a></li>
+              <li><a href="services/linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a></li>
+              <li><a href="services/website-builder.html">Website Builder</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
@@ -215,7 +215,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="services/#">Domain Name Registration</a></h4>
+              <h4 class="title"><a href="services/domain-name-registration.html">Domain Name Registration</a></h4>
               <p class="description">
                 Get a new domain at a great price from over 50 extensions. Our Domains Manager makes it easy to manage,
                 update WHOIS details, redirect, transfer, and more—all in one place.
@@ -226,7 +226,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="services/#">Cloud Hosting</a></h4>
+              <h4 class="title"><a href="services/cloud-hosting.html">Cloud Hosting</a></h4>
               <p class="description">Data security is our top priority. We use the ZFS storage system and automatically
                 enable the ModSecurity firewall to protect your sites. Our free web accelerator tools can boost your
                 website’s speed, and we’ll migrate your sites to our hosting platform at no extra cost.</p>
@@ -236,7 +236,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="services/#">VPS Hosting</a></h4>
+              <h4 class="title"><a href="services/vps-hosting.html">VPS Hosting</a></h4>
               <p class="description">Grow your sites with a VPS server. Enjoy a variety of free addons and multiple
                 operating systems—all included in one great package.</p>
             </div>
@@ -245,7 +245,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/#">Linux Dedicated Web Hosting</a></h4>
+              <h4 class="title"><a href="services/linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a></h4>
               <p class="description">Our dedicated server packages set new standards in hosting. Choose Ubuntu, CentOS,
                 or
                 Debian at sign-up and get a free dedicated IP. Our custom internal network ensures a 99.9% uptime
@@ -256,7 +256,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="services/#">Website Builder</a></h4>
+              <h4 class="title"><a href="services/website-builder.html">Website Builder</a></h4>
               <p class="description">Our Website Builder lets you create a professional site with no coding needed.
                 Choose from customizable templates, use drag-and-drop tools, and launch your site quickly. Ideal for
                 businesses, entrepreneurs, and individuals, it includes features like image galleries, contact forms,
@@ -1064,20 +1064,21 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#featured-services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="open-source/open-source.html">Open Source</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Domain Name Registration</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Cloud Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/#">VPS Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Linux Dedicated Web
+              <li><i class="bx bx-chevron-right"></i> <a href="services/domain-name-registration.html">Domain Name
+                  Registration</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/cloud-hosting.html">Cloud Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/vps-hosting.html">VPS Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/linux-dedicated-web-hosting.html">Linux
+                  Dedicated Web
                   Hosting</a>
               </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/#">Website Builder</a>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/website-builder.html">Website Builder</a>
               </li>
             </ul>
           </div>
