[FIX] Hero domain to hero services

--- a/services/domain-name-registration.html
+++ b/services/domain-name-registration.html
@@ -131,7 +131,7 @@
         </section><!-- End Breadcrumbs -->
 
         <!-- ======= Hero Section ======= -->
-        <section id="hero-domain" class="d-flex align-items-center">
+        <section id="hero-services" class="d-flex align-items-center">
             <div class="container" data-aos="zoom-out" data-aos-delay="100">
                 <h1>Domain name <span>registration</span></h1>
                 <h2>
