[ADD] VPS Hosting and Website Builder

--- a/services/vps-hosting.html
+++ b/services/vps-hosting.html
@@ -17,6 +17,8 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://comparetables.duoservers.com/plain.css?table_bkg=&table_color=&plan_names_bkg=&features_hover=&order_bkg=&order_color=">
 
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -126,6 +128,8 @@
 
             </div>
         </section><!-- End Breadcrumbs -->
+
+        <div id="plantable"></div>
 
         <!-- ======= Hero Section ======= -->
         <section id="hero-services" class="d-flex align-items-center">
@@ -607,6 +611,11 @@
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script
+        src="https://comparetables.duoservers.com/script.js?store_id=321740&service=hosting&style=plain&order_url=&order_text=&container_id=plantable&features_type=0"></script>
 
 </body>
 
