[ADD] Pricing and vids

--- a/services/cloud-hosting.html
+++ b/services/cloud-hosting.html
@@ -28,6 +28,8 @@
 
     <!-- Template Main CSS File -->
     <link href="../assets/css/style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css">
 </head>
 
 <body>
@@ -136,7 +138,7 @@
                     enhance security.
                 </h2>
                 <div class="d-flex">
-                    <a href="#" class="btn-get-started scrollto">Register for cloud hosting</a>
+                    <a href="#sharedhosting" class="btn-get-started scrollto">Pricing</a>
                     <a href="https://linespace.duoservers.com/videos/DuoServers-domains-video-full-640-var.new1.mp4"
                         class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                 </div>
@@ -154,6 +156,8 @@
                 </p>
             </div>
         </section>
+
+        <div id="sharedhosting"></div>
 
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
@@ -252,6 +256,13 @@
             </div>
         </section>
         <!-- End Featured Services Section -->
+
+
+        <section id="sharedhosting" class="faq section-bg">
+            <div class="sharedhosting" data-aos="fade-up">
+            </div>
+        </section>
+        <!-- End Shared Hosting Pricing Section -->
 
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
@@ -377,7 +388,7 @@
 
                             <p>
                                 At Linespace, we are committed to providing top-notch cloud hosting solutions
-                                that deliver performance, reliability, and security. Contact us today to learn how our
+                                that deliver performance, reliability, and security. Order today to learn how our
                                 cloud hosting services can enhance your website’s capabilities.
                             </p>
                         </ul>
@@ -596,6 +607,11 @@
 
     <!-- Template Main JS File -->
     <script src="../assets/js/main.js"></script>
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script
+        src="https://comparetables.duoservers.com/script.js?store_id=321740&service=hosting&style=plain&order_url=&order_text=&container_id=sharedhosting&features_type=1"></script>
 
 </body>
 
