--- a/services/domain-name-registration.html
+++ b/services/domain-name-registration.html
@@ -138,7 +138,8 @@
                     Get a new domain at a great price from over 50 extensions.
                 </h2>
                 <div class="d-flex">
-                    <a href="#" class="btn-get-started scrollto">Register a domain</a>
+                    <a href="https://linespace.duoservers.com/hosting-order/" class="btn-get-started scrollto">Buy a
+                        domain</a>
                     <a href="https://linespace.duoservers.com/videos/DuoServers-domains-video-full-640-var.new1.mp4"
                         class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                 </div>
@@ -356,7 +357,7 @@
 
                             <p>
                                 At Linespace, we are committed to making domain name registration and management as easy
-                                and secure as possible. Contact us today to find the perfect domain name for your
+                                and secure as possible. Order today to find the perfect domain name for your
                                 website and start building your online presence.
                             </p>
                         </ul>
