--- a/services/vps-hosting.html
+++ b/services/vps-hosting.html
@@ -17,8 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://comparetables.duoservers.com/plain.css?table_bkg=&table_color=&plan_names_bkg=&features_hover=&order_bkg=&order_color=">
+
 
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -30,6 +29,8 @@
 
     <!-- Template Main CSS File -->
     <link href="../assets/css/style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css">
 </head>
 
 <body>
@@ -129,8 +130,6 @@
             </div>
         </section><!-- End Breadcrumbs -->
 
-        <div id="plantable"></div>
-
         <!-- ======= Hero Section ======= -->
         <section id="hero-services" class="d-flex align-items-center">
             <div class="container" data-aos="zoom-out" data-aos-delay="100">
@@ -139,8 +138,8 @@
                     A powerful and flexible hosting solution.
                 </h2>
                 <div class="d-flex">
-                    <a href="#" class="btn-get-started scrollto">Register for VPS hosting</a>
-                    <a href="https://linespace.duoservers.com/videos/DuoServers-domains-video-full-640-var.new1.mp4"
+                    <a href="#vpshosting" class="btn-get-started scrollto">Pricing</a>
+                    <a href="https://linespace.duoservers.com/videos/DuoServers-VPS-openvz-640-var.new1.mp4"
                         class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                 </div>
             </div>
@@ -158,6 +157,12 @@
                 </p>
             </div>
         </section>
+
+        <section id="vpshosting" class="faq section-bg">
+            <div class="vpshosting" data-aos="fade-up">
+            </div>
+        </section>
+        <!-- End VPS Hosting Pricing Section -->
 
         <section id="featured-services" class="featured-services">
             <div class="container" data-aos="fade-up">
@@ -392,7 +397,7 @@
 
                             <p>
                                 At Linespace, we are committed to providing reliable and high-performance VPS
-                                hosting solutions that meet your needs. Contact us today to learn how our VPS hosting
+                                hosting solutions that meet your needs. Order today to learn how our VPS hosting
                                 services can give you the control and scalability you need to succeed.
                             </p>
                         </ul>
@@ -615,7 +620,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script
-        src="https://comparetables.duoservers.com/script.js?store_id=321740&service=hosting&style=plain&order_url=&order_text=&container_id=plantable&features_type=0"></script>
+        src="https://comparetables.duoservers.com/script.js?store_id=321740&service=openvz&style=plain&order_url=&order_text=&container_id=vpshosting&features_type=1"></script>
 
 </body>
 
