[FIX] Broken links

--- a/services/linux-dedicated-web-hosting.html
+++ b/services/linux-dedicated-web-hosting.html
@@ -577,10 +577,10 @@
                 <span>Registered in the Kingdom of Eswatini</span>.
             </div>
             <div class="credits">
-                <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
-                <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-                <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-                <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+                <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+                <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+                <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+                <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
                 <a href="https://properstatus.com/">Network Status</a>&nbsp;&nbsp;
 
             </div>
