--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -69,29 +69,15 @@
               <li><a href="services/exampad.html">Exampad</a></li>
             </ul>
           </li> -->
-                    <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Gradebook</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="../index.html#featured-services"><span>Services</span> <i
+                    <li class="dropdown"><a href="#featured-services"><span>Services</span> <i
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="../services/custom_software.html">Custom Software Development</a></li>
-                            <li><a href="../services/consulting_and_advisory.html">Consulting and Advisory</a></li>
-                            <li><a href="../services/managed_services.html">Managed Services</a></li>
-                            <li><a href="../services/data_and_analytics.html">Data and Analytics</a></li>
-                            <li><a href="../services/digital_transformation.html">Digital Transformation</a></li>
-                            <li><a href="../services/cybersecurity.html">Cybersecurity</a></li>
-                            <li><a href="../services/training_and_support.html">Training and Support</a></li>
-                            <li><a href="../services/devops_and_cloud_infrastructure.html">DevOps and Cloud
-                                    Infrastructure</a></li>
-                            <li><a href="../services/emerging_technologies.html">Emerging Technologies</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Rabbit</a></li>
+                            <li><a href="../services/domain-name-registration.html">Domain Name Registration</a></li>
+                            <li><a href="../services/cloud-hosting.html">Cloud Hosting</a></li>
+                            <li><a href="../services/vps-hosting.html">VPS Hosting</a></li>
+                            <li><a href="../services/linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a>
+                            </li>
+                            <li><a href="../services/website-builder.html">Website Builder</a></li>
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto " href="../index.html#partners">Partners</a></li>
@@ -113,7 +99,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                    <li><a class="nav-link scrollto" href="../index.html#contact">Contact</a></li>
+                    <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -772,15 +759,22 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>Linespace<span></span></h3>
                         <p>
-                            We specialize in creating tailored software solutions that meet the unique needs of
-                            individuals,
-                            businesses, and organizations. Our mission is to empower our clients with cutting-edge
-                            technology and
-                            exceptional service.<br><br>
+                            We're a web services company specialising in creating tailored software solutions to meet
+                            the unique
+                            needs of individuals, businesses, and organizations. Our mission is to empower our clients
+                            with
+                            cutting-edge technology and exceptional service.<br><br>
+                            <strong>ID: </strong>321740<br />
                             <strong>Email:</strong> <a
                                 href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
-                            <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
+                            <strong>Eswatini:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
                                 href="tel:+268-7943-5667">+268-7943-5667</a><br>
+                            <strong>United States:</strong> <a href="tel: +1-855-211-0932">+1-855-211-0932</a><br>
+                            <strong>United States (Toll Free):</strong> <a
+                                href="tel: +1-727-546-HOST(4678)">+1-727-546-HOST
+                                (4678)</a><br>
+                            <strong>United Kingdom:</strong> <a href="tel: +44-20-3695-1294">+44-20-3695-1294</a><br>
+                            <strong>Australia:</strong> <a href="tel: +44-20-3695-1294">+61-2-8417-2372</a><br>
                             <strong>Chat:</strong> <a href="https://wa.me/26879255469">+268-7925-5469</a><br>
 
                         </p>
@@ -793,40 +787,27 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="../index.html#about">About</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
                                     href="../index.html#featured-services">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Open Source</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="../services/custom_software.html">Custom
-                                    Software
-                                    Development</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../services/consulting_and_advisory.html">Consulting and
-                                    Advisory</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="../services/managed_services.html">Managed
-                                    Services</a>
+                                    href="../services/domain-name-registration.html">Domain Name
+                                    Registration</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../services/cloud-hosting.html">Cloud
+                                    Hosting</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../services/vps-hosting.html">VPS
+                                    Hosting</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="../services/linux-dedicated-web-hosting.html">Linux
+                                    Dedicated Web
+                                    Hosting</a>
                             </li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="../services/data_and_analytics.html">Data
-                                    and
-                                    Analytics</a>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../services/website-builder.html">Website
+                                    Builder</a>
                             </li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../services/digital_transformation.html">Digital
-                                    Transformation</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../services/cybersecurity.html">Cybersecurity</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../services/training_and_support.html">Training and
-                                    Support</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../services/devops_and_cloud_infrastructure.html">DevOps and
-                                    Cloud Infrastructure</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../services/emerging_technologies.html">Emerging
-                                    Technologies</a></li>
                         </ul>
                     </div>
 
@@ -859,10 +840,12 @@
                 <span>Registered in the Kingdom of Eswatini</span>.
             </div>
             <div class="credits">
-                <a href="#">Privacy Policy</a>&nbsp;&nbsp;
-                <a href="terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-                <a href="cookies.html">Cookies</a>&nbsp;&nbsp;
-                <a href="paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+                <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+                <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+                <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+                <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+                <a href="https://properstatus.com/">Network Status</a>&nbsp;&nbsp;
+
             </div>
         </div>
     </footer>
