[ADD] Blog links

--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -99,7 +99,9 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
+                    <li><a class="nav-link scrollto" href="https://medium.com/@linespacesoftware">Blog</a></li>
                     <li><a class="nav-link scrollto" href="../index.html#contact">Contact</a></li>
+
                     <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -787,6 +789,9 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="../index.html#about">About</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
                                     href="../index.html#featured-services">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="https://medium.com/@linespacesoftware">Blog</a></li>
+
                         </ul>
                     </div>
 
