--- a/services/website-builder.html
+++ b/services/website-builder.html
@@ -98,6 +98,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
+                    <li><a class="nav-link scrollto" href="https://medium.com/@linespacesoftware">Blog</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                     <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
                 </ul>
@@ -517,6 +518,9 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#featured-services">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="https://medium.com/@linespacesoftware">Blog</a></li>
+
                         </ul>
                     </div>
 
