--- a/legal/terms-of-service.html
+++ b/legal/terms-of-service.html
@@ -99,6 +99,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
+                    <li><a class="nav-link scrollto" href="https://medium.com/@linespacesoftware">Blog</a></li>
                     <li><a class="nav-link scrollto" href="../index.html#contact">Contact</a></li>
                     <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
                 </ul>
@@ -381,6 +382,9 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="../index.html#about">About</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
                                     href="../index.html#featured-services">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="https://medium.com/@linespacesoftware">Blog</a></li>
+
                         </ul>
                     </div>
 
