--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace Software - Domain Name Registration, Cloud Hosting, VPS Hosting, Linux Dedicated Web Hosting, Website
-    Builder,
-    and more.
+  <title>Linespace Software - Reliable solutions for complex organization challenges.
   </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -66,12 +64,21 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li class="dropdown"><a href="services/custom_software.html"><span>Custom Software</span> <i
+                class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="services/web-applications/web_development.html">Web Development</a></li>
+              <li><a href="services/ios-and-android-apps/mobile_app_development.html">Mobile App Development</a></li>
+              <li><a href="services/cross-platform-apps/desktop_applications.html">Desktop Applications</a></li>
+            </ul>
+          </li>
           <!-- <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/exampad.html">Exampad</a></li>
             </ul>
           </li> -->
-          <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="services/web_services.html"><span>Web Services</span> <i
+                class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/domain-name-registration.html">Domain Name Registration</a></li>
               <li><a href="services/cloud-hosting.html">Cloud Hosting</a></li>
@@ -121,8 +128,8 @@
       </h2>
       <div class="d-flex">
         <a href="#contact" class="btn-get-started scrollto">Get a Free Consultation</a>
-        <a href="https://linespace.duoservers.com/videos/DuoServers-Intro-Video-full-640-var.new1.mp4"
-          class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <!-- <a href="https://linespace.duoservers.com/videos/DuoServers-Intro-Video-full-640-var.new1.mp4"
+          class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
       </div>
     </div>
   </section>
@@ -986,24 +993,18 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#featured-services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#partners">Partners</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="https://medium.com/@linespacesoftware">Blog</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://us.cloudlogin.co/login/">Client Login</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/domain-name-registration.html">Domain Name
-                  Registration</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/cloud-hosting.html">Cloud Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/vps-hosting.html">VPS Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/linux-dedicated-web-hosting.html">Linux
-                  Dedicated Web
-                  Hosting</a>
-              </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/website-builder.html">Website Builder</a>
-              </li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/custom_software.html">Custom Software</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services/web_services.html">Web Services</a></li>
             </ul>
           </div>
 
