--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>Linespace</span></h1>
       <h2>
         In today's digital age, every organization, regardless of size or industry, fundamentally relies on technology
         to drive success and efficiency.
@@ -971,18 +970,12 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span></span></h3>
             <p>
-              We're a web services company specialising in creating tailored software solutions to meet the unique
+              We're a software company specialising in creating tailored software solutions to meet the unique
               needs of individuals, businesses, and organizations. Our mission is to empower our clients with
               cutting-edge technology and exceptional service.<br><br>
-              <strong>ID: </strong>321740<br />
               <strong>Email:</strong> <a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
-              <strong>Eswatini:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
+              <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
                 href="tel:+268-7943-5667">+268-7943-5667</a><br>
-              <strong>United States:</strong> <a href="tel: +1-855-211-0932">+1-855-211-0932</a><br>
-              <strong>United States (Toll Free):</strong> <a href="tel: +1-727-546-HOST(4678)">+1-727-546-HOST
-                (4678)</a><br>
-              <strong>United Kingdom:</strong> <a href="tel: +44-20-3695-1294">+44-20-3695-1294</a><br>
-              <strong>Australia:</strong> <a href="tel: +44-20-3695-1294">+61-2-8417-2372</a><br>
               <strong>Chat:</strong> <a href="https://wa.me/26879255469">+268-7925-5469</a><br>
 
             </p>
