--- a/services/domain-name-registration.html
+++ b/services/domain-name-registration.html
@@ -58,29 +58,40 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="../index.html">Linespace<span></span></a></h1>
+            <h1 class="logo"><a href="index.html">Linespace<span></span></a></h1>
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
+                    <li><a class="nav-link scrollto" href="../index.html#about">About</a></li>
+                    <li class="dropdown"><a href="../services/custom_software.html"><span>Custom Software</span> <i
+                                class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="../services/web-applications/web_development.html">Web Development</a></li>
+                            <li><a href="../services/ios-and-android-apps/mobile_app_development.html">Mobile App
+                                    Development</a></li>
+                            <li><a href="../services/cross-platform-apps/desktop_applications.html">Desktop
+                                    Applications</a></li>
+                        </ul>
+                    </li>
                     <!-- <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/exampad.html">Exampad</a></li>
             </ul>
           </li> -->
-                    <li class="dropdown"><a href="#featured-services"><span>Services</span> <i
+                    <li class="dropdown"><a href="../services/web_services.html"><span>Web Services</span> <i
                                 class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="#">Domain Name Registration</a></li>
-                            <li><a href="cloud-hosting.html">Cloud Hosting</a></li>
-                            <li><a href="vps-hosting.html">VPS Hosting</a></li>
-                            <li><a href="linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a></li>
-                            <li><a href="website-builder.html">Website Builder</a></li>
+                            <li><a href="../services/domain-name-registration.html">Domain Name Registration</a></li>
+                            <li><a href="../services/cloud-hosting.html">Cloud Hosting</a></li>
+                            <li><a href="../services/vps-hosting.html">VPS Hosting</a></li>
+                            <li><a href="../services/linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a>
+                            </li>
+                            <li><a href="../services/website-builder.html">Website Builder</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
+                    <li><a class="nav-link scrollto " href="../index.html#partners">Partners</a></li>
                     <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
                     <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -100,7 +111,7 @@
             </ul>
           </li> -->
                     <li><a class="nav-link scrollto" href="https://medium.com/@linespacesoftware">Blog</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                    <li><a class="nav-link scrollto" href="../index.html#contact">Contact</a></li>
                     <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -475,22 +486,13 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>Linespace<span></span></h3>
                         <p>
-                            We're a web services company specialising in creating tailored software solutions to meet
-                            the unique
-                            needs of individuals, businesses, and organizations. Our mission is to empower our clients
-                            with
-                            cutting-edge technology and exceptional service.<br><br>
-                            <strong>ID: </strong>321740<br />
+                            We're a software company specialising in creating tailored software solutions to meet the
+                            unique needs of individuals, businesses, and organizations. Our mission is to empower our
+                            clients with cutting-edge technology and exceptional service.<br><br>
                             <strong>Email:</strong> <a
                                 href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
-                            <strong>Eswatini:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
+                            <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
                                 href="tel:+268-7943-5667">+268-7943-5667</a><br>
-                            <strong>United States:</strong> <a href="tel: +1-855-211-0932">+1-855-211-0932</a><br>
-                            <strong>United States (Toll Free):</strong> <a
-                                href="tel: +1-727-546-HOST(4678)">+1-727-546-HOST
-                                (4678)</a><br>
-                            <strong>United Kingdom:</strong> <a href="tel: +44-20-3695-1294">+44-20-3695-1294</a><br>
-                            <strong>Australia:</strong> <a href="tel: +44-20-3695-1294">+61-2-8417-2372</a><br>
                             <strong>Chat:</strong> <a href="https://wa.me/26879255469">+268-7925-5469</a><br>
 
                         </p>
