--- a/index.html
+++ b/index.html
@@ -64,48 +64,36 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="services/custom_software.html"><span>Custom Software</span> <i
+          <li class="dropdown"><a href="products/products.html"><span>Products</span> <i
                 class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="services/web-applications/web_development.html">Web Development</a></li>
-              <li><a href="services/ios-and-android-apps/mobile_app_development.html">Mobile App Development</a></li>
-              <li><a href="services/cross-platform-apps/desktop_applications.html">Desktop Applications</a></li>
+              <li><a href="products/gradebook.html">Gradebook</a></li>
             </ul>
           </li>
-          <!-- <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="services/exampad.html">Exampad</a></li>
-            </ul>
-          </li> -->
-          <li class="dropdown"><a href="services/web_services.html"><span>Web Services</span> <i
-                class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="services/domain-name-registration.html">Domain Name Registration</a></li>
-              <li><a href="services/cloud-hosting.html">Cloud Hosting</a></li>
-              <li><a href="services/vps-hosting.html">VPS Hosting</a></li>
-              <li><a href="services/linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a></li>
-              <li><a href="services/website-builder.html">Website Builder</a></li>
+              <li class="dropdown"><a href="services/custom_software.html"><span>Custom Software</span> <i
+                    class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="services/web-applications/web_development.html">Web Development</a></li>
+                  <li><a href="services/ios-and-android-apps/mobile_app_development.html">Mobile App Development</a>
+                  </li>
+                  <li><a href="services/cross-platform-apps/desktop_applications.html">Desktop Applications</a></li>
+                </ul>
+              </li>
+              <li class="dropdown"><a href="services/web_services.html"><span>Web Services</span> <i
+                    class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="services/domain-name-registration.html">Domain Name Registration</a></li>
+                  <li><a href="services/cloud-hosting.html">Cloud Hosting</a></li>
+                  <li><a href="services/vps-hosting.html">VPS Hosting</a></li>
+                  <li><a href="services/linux-dedicated-web-hosting.html">Linux Dedicated Web Hosting</a></li>
+                  <li><a href="services/website-builder.html">Website Builder</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#partners">Partners</a></li>
-          <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
           <li><a class="nav-link scrollto" href="https://medium.com/@linespacesoftware">Blog</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="nav-link scrollto" href="https://us.cloudlogin.co/login/">Client Login</a></li>
@@ -971,8 +959,7 @@
             <h3>Linespace<span></span></h3>
             <p>
               We're a software company specialising in creating tailored software solutions to meet the unique
-              needs of individuals, businesses, and organizations. Our mission is to empower our clients with
-              cutting-edge technology and exceptional service.<br><br>
+              needs of individuals, businesses, and organizations.<br><br>
               <strong>Email:</strong> <a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a><br>
               <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a> | <a
                 href="tel:+268-7943-5667">+268-7943-5667</a><br>
